# aswsim

./: .gitignore  CHANGELOG.md  PLATFORM_INSTRUCTIONS.txt  QUICK_START.txt  README.md  aswsim-cli.spec  aswsim.spec  build_examples.py  build_standalone.py  create_distribution.py  detection-demo.spec  distribution-comparison.spec  pyproject.toml  search_patterns.toml
.github/workflows/: build.yml
.verset/: config.toml
.verset/changesets/: 20250817002352-0361c205.md
distribution/: PLATFORM_INSTRUCTIONS.txt  QUICK_START.txt  README.md
examples/: benchmark_performance.py  detection_demo.py  distribution_comparison.py
src/aswsim/: __init__.py  __main__.py  behavior.py  distributions.py  physics.py  sensors.py  simulation.py  visualize.py
