[project]
name = "aswsim"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "numpy>=1.26",
    "plotly>=5.22",
]

[project.scripts]
aswsim = "aswsim:main"

[tool.uv]
package = true

[dependency-groups]
dev = [
    "mypy>=1.17.1",
    "ty>=0.0.1a18",
    "pyinstaller>=6.0",
    "pyinstaller-hooks-contrib>=2025.8",
]
